# sol2huff

./: .gitignore  Cargo.toml  README.md
artifacts/Storage.sol/: Storage.json
cache/: solidity-files-cache.json
contracts/: Storage.sol
src/: config  helpers.rs  main.rs
