[package]
name = "sol2huff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
murph = { git = "https://github.com/iFrostizz/murph.git" }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"